# cmake-ocaml-simple

./: .gitignore  CMakeLists.txt
cmake/: AddOCaml.cmake  FindOCaml.cmake
src/: CMakeLists.txt
src/pkg_a/: CMakeLists.txt  mod_a.ml  mod_a.mli  mod_a_stubs.c
src/pkg_b/: CMakeLists.txt  mod_b.ml
